# agnes-mini

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  gen_tests.py  pyproject.toml  skill.json
.codex-plugin/: plugin.json
docs/: Agnes Mini — 后续优化与修改意见.md  Agnes Mini 技术开发文档 v2.0 审核报告.md  Agnes Mini 重构开发技术文档 审核报告1.0.md  api.md  architecture.md  design.md  examples.md  plan_decoded.md  plan_decoded_utf8.txt  seedance_prompts.md  testing.md  技术展望v3.0.md  技术开发文档.md  技术开发文档v2.0.md  技术开发文档审核1.0.md  技术开发计划文档 评审报告1.0.md  技术开发计划文档 评审报告1.1.md  技术开发计划文档v2.0.md  技术文档.md  重构开发技术文档.md  重构开发计划文档.md
examples/: chat_demo.py  image_generation.py  multimodal_agent.py  script_to_video.py  video_generation.py
script/: lastpiece.md
src/: __main__.py  cli.py  config.py  exceptions.py  logger.py  pipeline.py  pipeline_v2.py  skill.py
src/agents/: __init__.py  base.py  consistent_generator.py  image_agent.py  orchestrator.py  reference_generator.py  script_agent.py  script_analysis_agent.py  text_agent.py  tools.py  video_agent.py
src/internal/: dev_skill.py  review_skill.py  templates.py  test_skill.py
src/models/: __init__.py  character.py  chat.py  common.py  image.py  scene.py  script.py  video.py
src/providers/: __init__.py  base.py  chat.py  image.py  mock_chat.py  mock_image.py  mock_video.py  video.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_integration.py  test_models.py  test_v2_models.py
tests/test_agents/: test_image_agent.py  test_orchestrator.py  test_script_agent.py  test_text_agent.py  test_video_agent.py
(+3 files in other folders)
